fix embedded videos
Signed-off-by: Peter Grajcar <petergrajcar@duck.com>

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <li>
                 <h3>U stolára.</h3>
                 <p class="line">
-                    <i>Vdova.</i> Umrel mi muž a potrebovala by som truhlu, — či máte aj číňovč truhly?
+                    <i>Vdova.</i> Umrel mi muž a potrebovala by som truhlu, — či máte aj cínové truhly?
                 </p>
                 <p class="line">
-                    <i>Stolár.</i> Nie, ja robím len drevená.
+                    <i>Stolár.</i> Nie, ja robím len drevené.
                 </p>
                 <p class="line">
-                    <i>Vdova.</i> Cíňovó sú ale peknejšio a trvácnejšie, či nie je pravda?
+                    <i>Vdova.</i> Cíňové sú ale peknejšie a trvácnejšie, či nie je pravda?
                 </p>
                 <p class="line">
                     <i>Stolár.</i> No áno, to je pravda, peknejšie sú, — ale to vám už musím povedať: „zdravšie sú predca len tie drevené!“
@@ -362,36 +362,46 @@
 
             <h2>1988</h2>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsIi9b_AmEg?clip=UgkxOcI_YcRwuY2sMnHcGkUzTysOre4MMU-z&amp;clipt=EMe1CRi2tQo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Kurnik</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsIi9b_AmEg?start=155&end=171" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
 
             <h2>1990-1992</h2>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TIb_VF2dkuM?clip=Ugkxap8LA8Qa2uC1FNp5baI9SYlqvZ7C9sc_&amp;clipt=EOKSFBiP4RU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Karate</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/twOvDZNsu90?start=44&end=68" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/twOvDZNsu90?clip=Ugkxsqu3RJNCqCXvwHmAMmEkFJgODQ9LrR5d&amp;clipt=EPPdAhjvmQQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Fa</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pmZYRwSrhos?start=191&end=219" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pmZYRwSrhos?clip=Ugkxf709MySjWrjqIYM-oxnvdK7CxjtET9ZR&amp;clipt=EOjjCxi48Aw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Alzákov otec</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=21&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?clip=UgkxQMCUm1o3LqpknOleAty1TRLDdZ7zIK2I&amp;clipt=EMGoARioiQI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Alzákov otec 2</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=87&end=94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?clip=UgkxwFWNLXS5oEPwicky-kveJsDTVRT7n_T6&amp;clipt=EMaRAhjwwwM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Plot Twist</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=35&end=57" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?clip=UgkxuHLyLUEZlZBoHtlRlgZSRQDje8cbzgNh&amp;clipt=EPKpBRix3wU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>???</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TIb_VF2dkuM?start=330&end=357" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?clip=UgkxchJveXg7stMRz2m5_Hv4xkrZHbDd6mIA&amp;clipt=EJuJARiB1QI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Sny</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=17&end=42" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?clip=UgkxeLp52uUMyqfdsH4XSTA1nECeSWsGvxO9&amp;clipt=EOr6BRipmwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>LGBTI propaganda</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=97&end=117" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?clip=UgkxKTT2uPPxmoC0HjR7Bq35DkfQGin1nt1V&amp;clipt=EIvXEBjouRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h3>Poetika</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=273&end=302" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
 
 
