--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li>
                 <h3>U stolára.</h3>
                 <p class="line">
-                    <i>Vdova.</i> Umrel mi muž a potrebovala by som truhlu, — či máte aj cínové truhly?
+                    <i>Vdova.</i> Umrel mi muž a potrebovala by som truhlu, — či máte aj cíňové truhly?
                 </p>
                 <p class="line">
                     <i>Stolár.</i> Nie, ja robím len drevené.
