--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     I. Čo si už kúpil z toho povýšeného platu ?
                 </p>
                 <p class="line">
-                    II. Šesf prasiec, ale . . .
+                    II. Šesť prasiec, ale . . .
                 </p>
                 <p class="line">
                     I. Čo ale ... ?
