--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p class="line">
                 </p>
                 <p class="line">
-                    B. Áno. — čím Vám môžem slúžiť?
+                    B. Áno. — čím <em>Vám</em> môžem slúžiť?
                 </p>
 
                 <footer class="reference">
