--- a/index.html
+++ b/index.html
@@ -204,6 +204,21 @@
             </li>
             <h2>1910</h2>
             <li>
+                <p class="line">
+                    Zaľúbený Japonec zasadí ružový krik pod oblok svojej lúbenej. Potom ide každý den obzreť, či deva krík polieva, alebo nie.
+                </p>
+                <p class="line">
+                    U nás je tomu ináč. Devy pozorujú, aký plat má ktorý; šuhaji však, aké veno má ktorá.
+                </p>
+                <footer class="reference">
+                    Černokňažník: humoristicko-satirický časopis. Martin: Consortium Černokňažníka, 25.03.1910, 
+                    32(35)(3), p. 3. ISSN 1337-1150. Dostupné tiež z: 
+                    <a href="https://dikda.snk.sk/uuid/uuid:818fc5e5-f6d9-472b-8a70-c6c076fc978e">
+                        https://dikda.snk.sk/uuid/uuid:818fc5e5-f6d9-472b-8a70-c6c076fc978e
+                    </a>
+                </footer>
+            </li>
+            <li>
                 <h3>Výmluvná.</h3>
 
                 <p class="line">
@@ -226,7 +241,6 @@
                         https://dikda.snk.sk/uuid/uuid:e5a6d0ab-1753-4330-9bf1-6402ce8e4dad
                     </a>
                 </footer>
-
             </li>
             <h2>1920</h2>
             <li>
@@ -363,49 +377,49 @@
             <h2>1988</h2>
             <li>
                 <h3>Kurnik</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsIi9b_AmEg?start=155&end=171" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/wsIi9b_AmEg?start=155&end=171" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
 
             <h2>1990-1992</h2>
             <li>
                 <h3>Karate</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/twOvDZNsu90?start=44&end=68" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/twOvDZNsu90?start=44&end=68" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Fa</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pmZYRwSrhos?start=191&end=211" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/pmZYRwSrhos?start=191&end=211" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Alzákov otec</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=21&end=35" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=21&end=35" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Alzákov otec 2</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=87&end=94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=87&end=94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Plot Twist</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=35&end=57" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/AVChHoQ4Z8M?start=35&end=57" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>???</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TIb_VF2dkuM?start=330&end=357" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/TIb_VF2dkuM?start=330&end=357" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Sny</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=17&end=42" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=17&end=42" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>LGBTI propaganda</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=97&end=117" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=97&end=117" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Poetika</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=273&end=302" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/hV2b2Wb-9-s?start=273&end=302" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
                 <h3>Kabát</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/twOvDZNsu90?start=90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/twOvDZNsu90?start=90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
         </ol>
     </body>
