--- a/index.html
+++ b/index.html
@@ -381,6 +381,10 @@
 
             <h2>1988</h2>
             <li>
+                <h3>Mansplained</h3>
+                <iframe src="https://www.youtube-nocookie.com/embed/QBwmsPn29zg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </li>
+            <li>
                 <h3>Kurnik</h3>
                 <iframe src="https://www.youtube-nocookie.com/embed/wsIi9b_AmEg?start=155&end=171" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
