--- a/index.html
+++ b/index.html
@@ -373,6 +373,12 @@
                 </footer>
             </li>
 
+            <h2>1940-1949</h2>
+            <li>
+                <h3>My Fair Foreigner</h3>
+                <iframe src="https://www.youtube-nocookie.com/embed/Dt9I6H0Oi40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </li>
+
             <h2>1986</h2>
             <li>
                 <h3>Internet</h3>
