--- a/index.html
+++ b/index.html
@@ -379,6 +379,12 @@
                 <iframe src="https://www.youtube-nocookie.com/embed/Dt9I6H0Oi40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
 
+            <h2>1978</h2>
+            <li>
+                <h3>Vrcholová matematika</h3>
+                <iframe src="https://www.youtube-nocookie.com/embed/Nrki9xUvBIw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </li>
+
             <h2>1986</h2>
             <li>
                 <h3>Internet</h3>
