--- a/index.html
+++ b/index.html
@@ -64,6 +64,54 @@
                     </a>
                 </footer>
             </li>
+            <h2>1904</h2>
+            <li>
+                <h3>Ako vykántrime potkanov?</h3>
+                <p class="line">
+                    V znamenitých »hospodárskych Novinách«, ktoré
+                    vychodia v Turč. Sv. Martine pod redaktorstvom p. Petra
+                    Kompiša jeden vyzkúšený hospodár odporúča nasle
+                    dovnú »pascu« na potkany, ktorú si môže každý kto
+                    potrebuje sám zhotoviť, a síce nasledovne: Vezmeme
+                    stredný sud, starý, ale ešte natoľko udržaný, aby vodu ne
+                    prepúšťal. Sud postavme na miesto, kde chceme potkany
+                    lapať a položme na dno tri tehly, dve na plochú stranu
+                    a na ne jednu hore koncom. Potom nalejeme do suda
+                    toľko vody, aby hore koncom stojáca tehla len na I ctm.
+                    vyčnievala. Potom pribijeme alebo priviažeme na vrchný
+                    otvor suda kus papieru, koľký stačí na zakrytie celého
+                    otvoru; papier musí byť tvrdší, aby sa priľahko nezo
+                    hýňal. Pripevnený papier cez prostriedok vreckovým no
+                    žíkom krížovým rezom prerežeme a posypeme ho tlčeným
+                    cukrom a múkou. Na bok suda (z vonku) oprerne šikmo
+                    doštičku aspoň na 6 ctm. širokú a taktiež posypeme ju
+                    cukrom a múkou ale o moc skúpejšie ako sme papier
+                    posypali. Teraz je pasca nastavená. Keď jeden alebo dva
+                    potkany vylezú hore doštičkou na papier, sošuchnú sa
+                    do suda do vody. Tu výndu na vyčnievajúcu tehlu, ale
+                    poneváč na nej dva potkany miesta nemajú, pustia sa do
+                    seba, ani jeden nechce ísť do vody, hryzú a škrabú sa.
+                    Na ten lomoz pribehnú druhé potkany, ponáhľajú sa
+                    jeden za druhým hore doskou do suda, kde pomáhajú
+                    ostatním biť a topiť sa. Táto pasca, — píše zpomenutý
+                    hospodár — je najjednoduchejšia, najlacnejšia a najúčin
+                    nejšia zo všetkých, ktoré som dosiaľ poznal. V prvú
+                    noc, ked som ju postavil, chytilo sa do nej 38
+                    potkanov. Odporúčame tu opísanú pascu. Ci by ale miesto
+                    tehly nemohlo byť to isté p upravené v tej veľkosti z do
+                    štičiek, aby tehla nepadla ? Ako papier bude dobrý slabá,
+                    tenká lepenka (pappendekl). Kto bude probovať, nech nám
+                    o výsledku podá láskavé zprávu.
+                </p>
+
+                <footer class="reference">
+                    Liptovsko-Oravské noviny. Ružomberok: Aurel Styk, 1904, 2(7), p. 8. ISSN 1337-1401.
+                    Dostupné tiež z:
+                    <a href="https://dikda.snk.sk/view/uuid:f6a5be84-f744-4f1c-8a90-77504d124582">
+                        https://dikda.snk.sk/view/uuid:f6a5be84-f744-4f1c-8a90-77504d124582
+                    </a>
+                </footer>
+            </li>
             <h2>1908</h2>
             <li>
                 <h3>Novoslovenčina.</h3>
@@ -211,8 +259,8 @@
                     U nás je tomu ináč. Devy pozorujú, aký plat má ktorý; šuhaji však, aké veno má ktorá.
                 </p>
                 <footer class="reference">
-                    Černokňažník: humoristicko-satirický časopis. Martin: Consortium Černokňažníka, 25.03.1910, 
-                    32(35)(3), p. 3. ISSN 1337-1150. Dostupné tiež z: 
+                    Černokňažník: humoristicko-satirický časopis. Martin: Consortium Černokňažníka, 25.03.1910,
+                    32(35)(3), p. 3. ISSN 1337-1150. Dostupné tiež z:
                     <a href="https://dikda.snk.sk/uuid/uuid:818fc5e5-f6d9-472b-8a70-c6c076fc978e">
                         https://dikda.snk.sk/uuid/uuid:818fc5e5-f6d9-472b-8a70-c6c076fc978e
                     </a>
@@ -295,9 +343,11 @@
 
                 <h3>Po hebrejsky to mienili.</h3>
 
+                <p class="line">
                 Pri pojednávaní dávky z majetku a prírastku na majetku v mestečku Top. skoro všetci židia prihlásili,
                 že mali v 1914. roku väčší majetok, ako v 1919. Predseda komisie neprijal ich tvrdenie, ale poznamenal;
                 tieto údaje musia sa čítať po hebrejsky (totižto opačne).
+                </p>
 
                 <footer class="reference">
                     Koza: vychodí keď chce. Bratislava: Slovenské nakladateľstvo, 1924, 2(1), p. 4. ISSN 1337-5253.
