--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     prepúšťal. Sud postavme na miesto, kde chceme potkany
                     lapať a položme na dno tri tehly, dve na plochú stranu
                     a na ne jednu hore koncom. Potom nalejeme do suda
-                    toľko vody, aby hore koncom stojáca tehla len na I ctm.
+                    toľko vody, aby hore koncom stojáca tehla len na 1 ctm.
                     vyčnievala. Potom pribijeme alebo priviažeme na vrchný
                     otvor suda kus papieru, koľký stačí na zakrytie celého
                     otvoru; papier musí byť tvrdší, aby sa priľahko nezo
@@ -99,7 +99,7 @@
                     noc, ked som ju postavil, chytilo sa do nej 38
                     potkanov. Odporúčame tu opísanú pascu. Ci by ale miesto
                     tehly nemohlo byť to isté p upravené v tej veľkosti z do
-                    štičiek, aby tehla nepadla ? Ako papier bude dobrý slabá,
+                    štičiek, aby tehla nepadla? Ako papier bude dobrý slabá,
                     tenká lepenka (pappendekl). Kto bude probovať, nech nám
                     o výsledku podá láskavé zprávu.
                 </p>
