--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                 <p class="line">
                     V znamenitých »hospodárskych Novinách«, ktoré
                     vychodia v Turč. Sv. Martine pod redaktorstvom p. Petra
-                    Kompiša jeden vyzkúšený hospodár odporúča nasle
-                    dovnú »pascu« na potkany, ktorú si môže každý kto
+                    Kompiša jeden vyzkúšený hospodár odporúča
+                    nasledovnú »pascu« na potkany, ktorú si môže každý kto
                     potrebuje sám zhotoviť, a síce nasledovne: Vezmeme
-                    stredný sud, starý, ale ešte natoľko udržaný, aby vodu ne
-                    prepúšťal. Sud postavme na miesto, kde chceme potkany
+                    stredný sud, starý, ale ešte natoľko udržaný, aby vodu
+                    neprepúšťal. Sud postavme na miesto, kde chceme potkany
                     lapať a položme na dno tri tehly, dve na plochú stranu
                     a na ne jednu hore koncom. Potom nalejeme do suda
                     toľko vody, aby hore koncom stojáca tehla len na 1 ctm.
                     vyčnievala. Potom pribijeme alebo priviažeme na vrchný
                     otvor suda kus papieru, koľký stačí na zakrytie celého
-                    otvoru; papier musí byť tvrdší, aby sa priľahko nezo
-                    hýňal. Pripevnený papier cez prostriedok vreckovým no
-                    žíkom krížovým rezom prerežeme a posypeme ho tlčeným
+                    otvoru; papier musí byť tvrdší, aby sa priľahko
+                    nezohýňal. Pripevnený papier cez prostriedok vreckovým
+                    nožíkom krížovým rezom prerežeme a posypeme ho tlčeným
                     cukrom a múkou. Na bok suda (z vonku) oprerne šikmo
                     doštičku aspoň na 6 ctm. širokú a taktiež posypeme ju
                     cukrom a múkou ale o moc skúpejšie ako sme papier
@@ -94,8 +94,8 @@
                     Na ten lomoz pribehnú druhé potkany, ponáhľajú sa
                     jeden za druhým hore doskou do suda, kde pomáhajú
                     ostatním biť a topiť sa. Táto pasca, — píše zpomenutý
-                    hospodár — je najjednoduchejšia, najlacnejšia a najúčin
-                    nejšia zo všetkých, ktoré som dosiaľ poznal. V prvú
+                    hospodár — je najjednoduchejšia, najlacnejšia a najúčinnejšia
+                    zo všetkých, ktoré som dosiaľ poznal. V prvú
                     noc, ked som ju postavil, chytilo sa do nej 38
                     potkanov. Odporúčame tu opísanú pascu. Ci by ale miesto
                     tehly nemohlo byť to isté p upravené v tej veľkosti z do
