--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     hospodár — je najjednoduchejšia, najlacnejšia a najúčinnejšia
                     zo všetkých, ktoré som dosiaľ poznal. V prvú
                     noc, ked som ju postavil, chytilo sa do nej 38
-                    potkanov. Odporúčame tu opísanú pascu. Ci by ale miesto
-                    tehly nemohlo byť to isté p upravené v tej veľkosti z do
+                    potkanov. Odporúčame tu opísanú pascu. Či by ale miesto
+                    tehly nemohlo byť to isté poupravené v tej veľkosti z do
                     štičiek, aby tehla nepadla? Ako papier bude dobrý slabá,
                     tenká lepenka (pappendekl). Kto bude probovať, nech nám
                     o výsledku podá láskavé zprávu.
